--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-self: stretch;
+  max-width: 1280px;
+  width: 100%;
   min-height: 608px;
 }
 .AboutMe-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   max-width: 1140px;
   min-width: 670px;
   width: 89%;
@@ -54,8 +55,8 @@
 
 }
 .AboutMe-image {
-  width: 40vw;
-  height: 40vw;
+  width: 100%;
+  height: 100%;
   min-width: 255px;
   min-height: 307px;
   max-width: 270px;
@@ -84,9 +85,9 @@
 }
 @media screen and (max-width: 700px) {
   .AboutMe-container {
-    min-width: 292px;
+    min-width: 100%;
     flex-direction: column;
-    width: 89%;
+    width: 100%;
   }
   .AboutMe-image {
     order: -1;
@@ -98,14 +99,13 @@
 }
 @media screen and (max-width: 460px) {
   .AboutMe {
-    max-width: 320px;
-
+    min-width: 100%;
   }
   .AboutMe-container {
     max-width: 300px;
   }
   .AboutMe-image {
-    min-width: 292px;
+    min-width: 90%;
     min-height: 352px;
   }
 
@@ -119,6 +119,6 @@
   .AboutMe__text {
     font-size: 11px;
     margin-bottom: 40px;
-    max-width: 292px;
+    max-width: 100%;
   }
 }
