--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,8 @@
   align-items: center;
   background-color: inherit;
   margin: 0 auto;
-  width: 95%;
+  width: 100%;
   min-height: 100vh;
   max-width: 1280px;
+  min-width: 100%;
 }
