--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -37,6 +37,13 @@
   height: 0;
   width: 0;
 }
+.Button__register {
+  height: 45px;
+  color: #fff;
+  background: #FF6838;
+  border-radius: 3px;
+  margin-top: 130px;
+}
 .Button__search {
   grid-column: 4/5;
   grid-row: 1;
@@ -129,7 +136,6 @@
     pointer-events: visibleFill;
     width: 40px;
     height: 40px;
-    margin-right: 30px;
     visibility: visible;
     opacity: 1;
     background-image: url('../../images/button/BlackIcon-mainOpen.svg');
