--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -12,18 +12,19 @@
   border-bottom: 1px solid #000;
 }
 .HeaderBar_place_techs {
-  min-height: 110px;
-  margin-bottom: 80px;
+  min-height: 150px;
+  margin-bottom: 90px;
   border-bottom: 1px solid #000;
 }
 .HeaderBar_place_aboutMe {
-  min-height: 110px;
-  margin-bottom: 60px;
+  min-height: 160px;
+  margin-bottom: 66px;
   border-bottom: 1px solid #000;
 }
 .HeaderBar_place_portfolio {
   min-height: fit-content;
   margin-bottom: 50px;
+  width: 100%;
 }
 .HeaderBar_place_footer {
   justify-content: center;
@@ -53,6 +54,7 @@
 .HeaderBar__title_place_portfolio {
   color:#A0A0A0;
   margin-bottom: 0;
+  font-size: 18px;
 }
 .HeaderBar__title_place_footer {
   font-size: 13px;
@@ -75,7 +77,7 @@
     margin-bottom: 60px;
   }
   .HeaderBar_place_portfolio {
-    min-width: 292px;
+    min-width: 90%;
     align-self: center;
   }
   .HeaderBar_place_footer {
