--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -14,34 +14,35 @@
   font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 .Login__label {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
   display: flex;
+  flex-direction: column;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   width: 100%;
-  justify-content: space-between;
-  font-size: 11px;
-  font-weight: 500;
+  font-size: 10px;
+  font-weight: 400;
+  color: #A0A0A0;
   line-height: 1.21;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 16px 0 17px 0;
-}
-.Login__label:last-of-type {
-  border-bottom: none;
 }
 .Login__input {
   box-sizing: border-box;
-  text-align: right;
+  color: #000;
   border: 0;
-  max-width: 150px;
+  border-bottom: 1px solid #A0A0A0;
   font-family: inherit;
-  font-size: inherit;
+  font-size: 14px;
+  line-height: inherit;
   margin-top: 0;
-  border-bottom: none;
+  padding: 10px 5px;
+}
+.Login__input:invalid {
+  border-bottom: 1px solid #f00;
 }
 .Login__input:focus {
   outline: none;
 }
-.Login__input_type_error:invalid {
-  border-bottom-color: #f00;
+.Login__input::placeholder {
+  color: #A0A0A0;
+  font-size: 10px;
 }
 
 .Login__error {
