--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -2,7 +2,7 @@
   min-width: 38px;
   width: 38px;
   height: 38px;
-  margin-left: 60px;
+  border-radius: 50%;
   background-image: url(../../images/logo/logo.svg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,10 +11,4 @@
 .Logo:hover {
   opacity: .5;
   cursor: pointer;
-}
-
-@media screen and (max-width: 800px) {
-  .Logo {
-    margin-left: 30px;
-  }
 }
