--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,5 +2,6 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  align-self: stretch;
+  max-width: 1280px;
+  width: 100%;
 }
