--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -15,11 +15,17 @@
   min-width: 200px;
   justify-content: flex-start;
 }
+.NavTab_place_register {
+  justify-content: center;
+}
 .NavTab_place_avatar {
   align-items: center;
 }
 .NavTab_place_header:last-of-type {
   margin-left: auto;
+}
+.NavTab_place_footer {
+  align-items: center;
 }
 .NavTab_place_promo {
   margin-bottom: 30px;
@@ -46,7 +52,8 @@
   flex-direction: column;
   align-self: center;
   max-width: 1140px;
-  min-width: 89%;
+  width: 100%;
+  min-width: 100%;
   padding: 0;
 }
 
@@ -63,6 +70,15 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 1.33;
+  align-items: center;
+  justify-content: center;
+}
+.NavTab__item_place_register {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.21;
+  margin-left: 6px;
+  color: #FF6838;
   align-items: center;
   justify-content: center;
 }
@@ -97,6 +113,7 @@
 .NavTab__item_place_footer {
   justify-content: center;
   align-items: center;
+  margin-left: 20px;
   font-size: 13px;
   line-height: 1.21;
 }
@@ -130,10 +147,11 @@
 }
 .NavTab__item_place_portfolio {
   min-width: 292px;
+  min-height: 50px;
   font-size: 30px;
   line-height: 1.66;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   margin-left: 0;
   justify-content: space-between;
   border-bottom: 1px solid #E8E8E8;
@@ -150,6 +168,9 @@
 .NavTab__item-active {
   background-color: #2BE080;
   border-radius: 3px;
+  width: 76px;
+  height: 32px;
+  margin-left: 30px;
 }
 .NavTab_active {
   border-bottom: 1px solid #000;
@@ -213,12 +234,12 @@
   }
   .NavTab_place_portfolio {
     justify-content: flex-start;
-    align-items: stretch;
     width: 89%;
-    min-width: 292px;
   }
   .NavTab__item_place_portfolio {
+    align-items: center;
     font-size: 18px;
+    min-width: 90%;
   }
   .NavTab__item_place_portfolio:last-of-type {
     margin-bottom: 90px;
