--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -8,40 +8,42 @@
 }
 .Register-form{
   display: flex;
+  box-sizing: border-box;
   flex-direction: column;
   max-width: 450px;
   min-width: 410px;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 .Register__label {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
   display: flex;
+  flex-direction: column;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   width: 100%;
-  justify-content: space-between;
-  font-size: 11px;
-  font-weight: 500;
+  font-size: 10px;
+  font-weight: 400;
+  color: #A0A0A0;
   line-height: 1.21;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 16px 0 17px 0;
-}
-.Register__label:last-of-type {
-  border-bottom: none;
 }
 .Register__input {
   box-sizing: border-box;
-  text-align: right;
+  color: #000;
   border: 0;
-  max-width: 150px;
+  border-bottom: 1px solid #A0A0A0;
   font-family: inherit;
-  font-size: inherit;
+  font-size: 14px;
+  line-height: inherit;
   margin-top: 0;
-  border-bottom: none;
+  padding: 10px 5px;
+}
+.Register__input:invalid {
+  border-bottom: 1px solid #f00;
 }
 .Register__input:focus {
   outline: none;
 }
-.Register__input_type_error:invalid {
-  border-bottom-color: #f00;
+.Register__input::placeholder {
+  color: #A0A0A0;
+  font-size: 10px;
 }
 
 .Register__error {
@@ -57,7 +59,8 @@
   font-style: normal;
   font-family: inherit;
   color: #f00;
-  align-self: flex-start;
+  text-align: right;
+  padding-left: 30px;
 }
 .Register__input-error_active {
   visibility: visible;
