--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -59,8 +59,12 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+.Button__goBack {
+  font-size: 14px;
+  color: #FF6838;
+  margin-top: auto;
+}
 .Button__profile-edit {
-  color: green;
   min-height: 20px;
   max-width: 100%;
   font-family: inherit;
@@ -77,7 +81,7 @@
   align-items: center;
   max-width: 100%;
   min-height: 20px;
-  color: red;
+  color: #EE3465;
   font-family: inherit;
   font-size: 12px;
 }
