--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -36,13 +36,14 @@
   padding: 10px 5px;
 }
 .Register__input:invalid {
+  color: #EE3465;
   border-bottom: 1px solid #f00;
 }
 .Register__input:focus {
   outline: none;
 }
 .Register__input::placeholder {
-  color: #A0A0A0;
+  color: #2BE080;
   font-size: 10px;
 }
 
