--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,5 @@
 .Button {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   border: none;
   outline: none;
   background-color: transparent;
@@ -61,6 +62,9 @@
 }
 .Button__goBack {
   font-size: 14px;
+  line-height: 1.21;
+  font-weight: normal;
+  width: 42px;
   color: #FF6838;
   margin-top: auto;
 }
