--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -36,6 +36,20 @@
   width: 100%;
   justify-content: center;
 }
+.HeaderBar_place_register {
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 107px;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+.HeaderBar_place_login {
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 107px;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
 
 .HeaderBar__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
@@ -50,6 +64,16 @@
   font-size: 24px;
   font-weight: 500;
   text-align: center;
+}
+.HeaderBar__title_place_register {
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0;
+}
+.HeaderBar__title_place_login {
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0;
 }
 .HeaderBar__title_place_portfolio {
   color:#A0A0A0;
@@ -83,6 +107,12 @@
   .HeaderBar_place_footer {
     max-width: 300px;
     margin-bottom: 30px;
+  }
+  .HeaderBar_place_register {
+    align-items: center;
+  }
+  .HeaderBar_place_login {
+    align-items: center;
   }
   .HeaderBar__title_place_footer {
     display: flex;
