--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,9 +5,11 @@
   justify-content: center;
   align-items: flex-start;
   min-height: 50vw;
+  padding-top: 70px;
 }
 .Login-form{
   display: flex;
+  box-sizing: border-box;
   flex-direction: column;
   max-width: 450px;
   min-width: 410px;
@@ -32,16 +34,17 @@
   font-size: 14px;
   line-height: inherit;
   margin-top: 0;
-  padding: 10px 5px;
+  padding: 10px 0;
 }
 .Login__input:invalid {
+  color: #EE3465;
   border-bottom: 1px solid #f00;
 }
 .Login__input:focus {
   outline: none;
 }
 .Login__input::placeholder {
-  color: #A0A0A0;
+  color: #2BE080;
   font-size: 10px;
 }
 
@@ -58,7 +61,8 @@
   font-style: normal;
   font-family: inherit;
   color: #f00;
-  align-self: flex-start;
+  text-align: right;
+  padding-left: 30px;
 }
 .Login__input-error_active {
   visibility: visible;
@@ -67,12 +71,26 @@
   left: 0;
 }
 
+@media screen and (max-width: 820px) {
+  .Login {
+    padding-top: 232px;
+  }
+}
 @media screen and (max-width: 620px) {
   .Login-form{
     min-width: 320px;
   }
 }
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 400px) {
+  .Login {
+    padding-top: 56px;
+    min-height: 760px;
+  }
+  .Login-form{
+    align-items: center;
+    min-height: 700px;
+    min-width: 100%;
+  }
   .Login__label {
     width: 260px;
     align-self: center;
