--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -14,6 +14,15 @@
   line-height: 1.21;
   margin-bottom: 70px;
 }
+.Navigation_place_login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #A0A0A0;
+  font-size: 14px;
+  line-height: 1.21;
+  margin-bottom: 70px;
+}
 .Navigation_place_popup {
   display: flex;
   flex-direction: column;
@@ -32,5 +41,21 @@
 @media screen and (max-width: 800px) {
   .Navigation_place_header {
     display: none;
+  }
+}
+@media screen and (max-width: 560px) {
+  .Navigation_place_register {
+    font-size: 12px;
+    line-height: 1.25;
+    margin-bottom: 15px;
+    max-width: 300px;
+    align-self: center;
+  }
+  .Navigation_place_login {
+    font-size: 12px;
+    line-height: 1.25;
+    margin-bottom: 15px;
+    max-width: 300px;
+    align-self: center;
   }
 }
