--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: flex-start;
   min-height: 50vw;
+  padding-top: 70px;
 }
 .Register-form{
   display: flex;
@@ -33,7 +34,7 @@
   font-size: 14px;
   line-height: inherit;
   margin-top: 0;
-  padding: 10px 5px;
+  padding: 10px 0;
 }
 .Register__input:invalid {
   color: #EE3465;
@@ -70,12 +71,26 @@
   left: 0;
 }
 
+@media screen and (max-width: 820px) {
+  .Register{
+    padding-top: 232px;
+  }
+}
 @media screen and (max-width: 620px) {
   .Register-form{
     min-width: 320px;
   }
 }
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 400px) {
+  .Register{
+    padding-top: 56px;
+    min-height: 760px;
+  }
+  .Register-form{
+    align-items: center;
+    min-height: 700px;
+    min-width: 100%;
+  }
   .Register__label {
     width: 260px;
     align-self: center;
