--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,8 +1,7 @@
 .SearchForm {
   display: flex;
-  justify-content: center;
   max-width: 1280px;
-  min-width: 100%;
+  width: 100%;
 }
 .SearchForm-container {
   display: grid;
@@ -11,21 +10,23 @@
   align-items: center;
   max-width: 1140px;
   width: 100%;
+  min-width: 89%;
   background-color: #fff;
   padding-bottom: 40px;
   border-bottom: 1px solid #E8E8E8;
+  margin: 0 auto;
   margin-bottom: 10px;
 }
 .SearchForm-input {
-  grid-column: 1/4;
+  grid-column: 1/5;
   grid-row: 1;
   min-height: 50px;
   background-color: #F9F9F9;
   border-radius: 5px;
   border: none;
-  margin-right: auto;
   box-sizing: border-box;
-  width: 100%;
+  max-width: 1086px;
+  width: 95%;
   min-width: 238px;
   font-family: inherit;
   font-size: inherit;
@@ -47,4 +48,10 @@
   justify-content: flex-end;
   align-items: stretch;
   align-self: flex-start;
+}
+
+@media screen and (max-width: 450px) {
+  .SearchForm-input {
+    width: 80%;
+  }
 }
