--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1140px;
-  min-width: 89%;
+  width: 89%;
   min-height: 56px;
 }
 
