--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -24,6 +24,7 @@
   font-weight: 400;
   color: #A0A0A0;
   line-height: 1.21;
+  margin-top: 24px;
 }
 .Register__input {
   box-sizing: border-box;
