--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -67,7 +67,7 @@
 }
 
 @media screen and (max-width: 620px) {
-  .Profile-form{
+  .Profile-form {
     min-width: 320px;
   }
 }
@@ -75,6 +75,11 @@
   .Profile__label {
     width: 260px;
     align-self: center;
+  }
+  .Profile-form {
+    align-items: center;
+    min-height: 700px;
+    min-width: 100%;
   }
 }
 
