--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -13,8 +13,7 @@
   padding-left: 22px;
 }
 .MoviesCard:hover {
-  transform: translateY(-2px) scale(1.005) translateZ(0);
-  box-shadow: 0 14px 26px rgba(0, 0, 0, 0.11), 0 14px 26px;
+  box-shadow: 0 14px 16px rgba(0, 0, 0, .1), 0 14px 16px;
 }
 .MoviesCard__title {
   text-overflow: ellipsis;
@@ -34,18 +33,24 @@
 .MoviesCard__title:hover {
   cursor: default;
 }
-.MoviesCard__pic {
+.MoviesCard__link {
   width: 220px;
   min-height: 122px;
-  background-image: url('../../images/moviesCard/errorPic.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   grid-column: -1/5;
   grid-row: 1/4;
   margin-left: auto;
 }
-.MoviesCard__pic:hover {
+.MoviesCard__pic {
+  width: 100%;
+  max-width: 100%;
+  min-width: 95%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+  object-position: center;
+}
+.MoviesCard__link:hover {
   cursor: pointer;
 }
 .MoviesCard__duration {
@@ -77,7 +82,7 @@
     padding: 0;
     justify-items: flex-start;
   }
-  .MoviesCard__pic {
+  .MoviesCard__link {
     grid-row: 1;
     grid-column: 3/1;
     min-height: 168px;
@@ -100,7 +105,7 @@
   .MoviesCard {
     min-width: 100%;
   }
-    .MoviesCard__pic {
+  .MoviesCard__link {
     min-width: 300px;
     max-width: 92%;
     justify-self: center;
@@ -116,12 +121,11 @@
   .MoviesCard {
     grid-template-columns: auto auto;
     max-width: 300px;
-    width: 300px;
+    min-width: 90%;
     padding: 0;
   }
-  .MoviesCard__pic {
-    width: 300px;
+  .MoviesCard__link {
+    width: 100%;
     max-width: 100%;
-    display: block;
   }
 }
