--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -31,7 +31,8 @@
   box-sizing: border-box;
   text-align: right;
   border: 0;
-  max-width: 150px;
+  width: 100%;
+  max-width: 100%;
   font-family: inherit;
   font-size: inherit;
   margin-top: 0;
@@ -57,7 +58,6 @@
   font-style: normal;
   font-family: inherit;
   color: #f00;
-  align-self: flex-start;
 }
 .Profile__input-error_active {
   visibility: visible;
@@ -70,6 +70,10 @@
   .Profile-form {
     min-width: 320px;
   }
+  .Profile__error {
+  width: 80%;
+  align-self: center;
+}
 }
 @media screen and (max-width: 350px) {
   .Profile__label {
