--- a/src/components/InfoTool/InfoTool.css
+++ b/src/components/InfoTool/InfoTool.css
@@ -1,6 +1,8 @@
 .InfoTool {
   position: absolute;
-  top: 100px;
+  top: 150px;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,9 +12,11 @@
 
 .InfoTool__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.21;
+  text-align: center;
+  background-color: #fff;
 }
 .InfoTool__title_theme_green {
   color: #2BE080;
