--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,88 +1,39 @@
-@keyframes preloader-inside-white {
-    0% {
-        -webkit-transform: scale(0, 0);
-        -moz-transform: scale(0, 0);
-        -ms-transform: scale(0, 0);
-        -o-transform: scale(0, 0);
-        transform: scale(0, 0);
-    }
-    100% {
-        -webkit-transform: scale(1, 1);
-        -moz-transform: scale(1, 1);
-        -ms-transform: scale(1, 1);
-        -o-transform: scale(1, 1);
-        transform: scale(1, 1);
-    }
+.Preloader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+}
+.Preloader:after {
+  content: ' ';
+  width: 40px;
+  height: 40px;
+  opacity: 0.8;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  animation: dual-ring 1.2s linear infinite;
 }
 
-@keyframes preloader-inside-red {
-    0% {
-        -webkit-transform: scale(0, 0);
-        -moz-transform: scale(0, 0);
-        -ms-transform: scale(0, 0);
-        -o-transform: scale(0, 0);
-        transform: scale(0, 0);
-    }
-    30% {
-        -webkit-transform: scale(0, 0);
-        -moz-transform: scale(0, 0);
-        -ms-transform: scale(0, 0);
-        -o-transform: scale(0, 0);
-        transform: scale(0, 0);
-    }
-    100% {
-        -webkit-transform: scale(1, 1);
-        -moz-transform: scale(1, 1);
-        -ms-transform: scale(1, 1);
-        -o-transform: scale(1, 1);
-        transform: scale(1, 1);
-    }
-}
-
-.preloader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    padding: 20px;
-}
-
-.preloader__container {
-    width: 100px;
-    height: 100px;
-    position: relative;
-}
-
-.preloader__round {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #fff;
-    border-radius: 50px;
-}
-
-.preloader__round::after,
-.preloader__round::before {
-    content: '';
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50px;
-}
-
-.preloader__round::after {
-    background: linear-gradient(100deg, #FF6838, #fff,  #FF6838);
-    animation: preloader-inside-white 1s ease-in-out infinite;
-}
-
-.preloader__round::before {
-    z-index: 10;
-    background: #fff;
-    animation: preloader-inside-red 1s ease-in-out infinite;
+@keyframes dual-ring {
+  0% {
+    transform: rotate(0deg);
+    border-color: #FF6838 transparent #2be07fd2 transparent;
+  }
+  50% {
+    transform: rotate(180deg);
+    border-color: #ff6738d7 transparent #2be07fa8 transparent;
+  }
+  75% {
+    transform: rotate(260deg);
+    border-color: #ff673897 transparent #2be07f97 transparent;
+  }
+  100% {
+    transform: rotate(360deg);
+    border-color: #ff67389c transparent #2be07f72 transparent;
+  }
 }
