--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -6,7 +6,7 @@
   max-width: 1280px;
   width: 100%;
   justify-items: stretch;
-  padding-top: 70px;
+  padding: 70px 0;
   text-align: center;
 }
 
