--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -52,6 +52,10 @@
   border-radius: 3px;
   margin-top: 179px;
 }
+.Button__disabled {
+  pointer-events: none;
+  background: #F8F8F8;
+}
 .Button__search {
   grid-column: 4/5;
   grid-row: 1;
