--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -10,6 +10,15 @@
   text-align: center;
 }
 
+.MoviesCardList__not-found {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.21;
+  margin: 0;
+  user-select: none;
+}
+
 @media screen and (max-width: 620px) {
   .MoviesCardList {
     grid-gap: 20px;
