--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -4,6 +4,7 @@
   align-items: center;
   max-width: 1280px;
   width: 100%;
+  user-select: none;
 }
 .AboutProject__containers {
   align-self: center;
