--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,7 @@
   margin-top: auto;
   min-height: 172px;
   background-color: #fff;
+  user-select: none;
 }
 
 .Footer__container {
@@ -28,6 +29,7 @@
   font-size: 13px;
   line-height: 1.21;
   color: #000;
+  user-select: none;
 }
 .Footer-item:last-of-type {
   margin-right: 0;
