--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -11,6 +11,7 @@
   justify-self: center;
   padding: 6px;
   padding-left: 22px;
+  user-select: none;
 }
 .MoviesCard:hover {
   box-shadow: 0 14px 16px rgba(0, 0, 0, .1), 0 14px 16px;
