--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -10,6 +10,7 @@
   background-color: rgba(0, 0, 0, .3);
   transition: all .4s ease;
   z-index: 10;
+  user-select: none;
 }
 .Popup_opened {
   height: 100vh;
