--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: flex-start;
   min-height: 50vw;
+  user-select: none;
 }
 .Profile-form{
   display: flex;
