--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -9,6 +9,7 @@
   width: 93.8%;
   background-color: #F5F5F5;
   border-radius: 5px;
+  user-select: none;
 }
 .Promo__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
