--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,9 +3,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  margin: auto;
   min-height: 50vw;
-  padding-top: 70px;
 }
 .Login-form {
   display: flex;
@@ -72,11 +72,6 @@
   left: 0;
 }
 
-@media screen and (max-width: 820px) {
-  .Login {
-    padding-top: 232px;
-  }
-}
 @media screen and (max-width: 620px) {
   .Login-form {
     min-width: 320px;
@@ -84,7 +79,6 @@
 }
 @media screen and (max-width: 400px) {
   .Login {
-    padding-top: 56px;
     min-height: 760px;
   }
   .Login-form {
