--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -36,7 +36,6 @@
 }
 .MoviesCard__link {
   width: 220px;
-  min-height: 122px;
   grid-column: -1/5;
   grid-row: 1/4;
   margin-left: auto;
@@ -45,7 +44,7 @@
   width: 100%;
   max-width: 100%;
   min-width: 95%;
-  height: 100%;
+  max-height: 122px;
   margin: 0;
   padding: 0;
   object-fit: cover;
