min height image

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -45,6 +45,7 @@
   max-width: 100%;
   min-width: 95%;
   max-height: 122px;
+  min-height: 122px;
   margin: 0;
   padding: 0;
   object-fit: cover;
