--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -53,12 +53,12 @@
 }
 .Profile__input-error {
   visibility: hidden;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.25;
   font-weight: normal;
   font-style: normal;
   font-family: inherit;
-  color: #f00;
+  color: #EE3465;
 }
 .Profile__input-error_active {
   visibility: visible;
