--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -138,6 +138,43 @@
   box-shadow: 0 14px 20px rgba(0, 0, 0, 0.11), 0 14px 20px;
   opacity: .5;
 }
+.Button-CardList {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 1.21;
+  font-weight: 500;
+  width: 200px;
+  height: 286px;
+  background-color: #FF6838;
+  border-radius: 5%;
+  border: none;
+  outline: none;
+  color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.11), 0 4px 6px;
+}
+.Button-Add {
+  position: absolute;
+  right: 0;
+  bottom: -60px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  line-height: 1.21;
+  font-weight: 500;
+  width: 150px;
+  height: 50px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  background: #2BE080;
+  color: #fff;
+  pointer-events: all;
+  z-index: 2;
+}
+.Button-Add:disabled {
+  background: #b1acac;
+  pointer-events: none;
+}
 .Button-like {
   grid-column: 1;
   grid-row: 2;
@@ -164,6 +201,57 @@
 }
 .Button-like_theme_delete:focus {
    box-shadow: 0 0 0 1px #EE3465;
+}
+
+.Button-Close {
+  position: absolute;
+  box-sizing: border-box;
+  top: -35px;
+  right: -35px;
+  width: 41px;
+  height: 41px;
+  background-color: transparent;
+  background-image: url(../../images/Close-Icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: scroll;
+  padding: 0;
+  border: none;
+  outline: none;
+  pointer-events: fill;
+}
+
+.Button-Close:active {
+  background-image: url(../../images/CloseRed.svg);
+}
+
+.Button-Submit {
+  box-sizing: border-box;
+  padding: 0;
+  max-width: 358px;
+  width: 100%;
+  height: 50px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.22;
+  text-align: center;
+  background-color: #000;
+  color: #fff;
+  border-radius: 10px;
+  margin-top: 48px;
+}
+
+@media screen and (max-height: 414px) {
+  .Button-Submit {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .Button-Submit {
+    margin-top: 36px;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -209,6 +297,14 @@
   }
   .Button__profile-exit {
     width: 260px;
+  }
+  .Button-Close {
+    right: 50%;
+    left: 50%;
+    top: -50px;
+    width: 30px;
+    height: 30px;
+    transform: translateX(-50%);
   }
 }
 @media screen and (max-width: 350px) {
