--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -19,29 +19,17 @@
   transition: all .5s ease;
 }
 
-.Popup-image {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  object-fit: cover;
-  width: 70vw;
-  min-width: 300px;
+.Popup_type_delete {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, .5);
 }
-
-.Popup-description {
-  position: absolute;
-  left: 50%;
-  top: 80%;
-  transform: translate(-50%, -50%);
-  width: 70vw;
-  min-width: 300px;
-  padding: 5px;
-  border-radius: 10px 0;
-  background-color: rgba(255, 255, 255, 0.721);
-  box-shadow: 0 14px 26px rgba(0, 0, 0, 0.11), 0 14px 26px;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.21;
+.Popup_type_image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .9);
 }
